Bug 427084 - Apply button in Configure initially enabled when LSP client is enabled
Summary: Apply button in Configure initially enabled when LSP client is enabled
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (show other bugs)
Version: 20.08.1
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-28 17:42 UTC by Grósz Dániel
Modified: 2020-10-11 13:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2020-09-28 17:42:26 UTC
SUMMARY
If the LSP client plugin is enabled and you open the Configure window, the Apply button is enabled even though you haven't made any change, and it asks for confirmation if you close the window.

STEPS TO REPRODUCE
1. In Settings / Configure Kate... / Plugins, check LSP Client.
2. Close the window with OK.
3. Click Settings / Configure Kate... again.
4. Click the Close button of the window manager.

OBSERVED RESULT
After 3., the Apply button is enabled. After 4., it asks "You have unsaved changes. Do you want to apply the changes or discard them?"

EXPECTED RESULT
Apply is disabled until you change something. If you close the window without changing anything, it doesn't ask for confirmation.

ADDITIONAL INFORMATION
IF you click Apply, the button becomes disabled, and you can close the window without confirmation.

SOFTWARE/OS VERSIONS
openSUSE Tumbleweed 20200925
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 1 Christoph Cullmann 2020-10-10 17:35:33 UTC
Can reproduce that, seems initial load does mark the stuff as config changed.
Comment 2 Mark Nauwelaerts 2020-10-11 10:13:18 UTC
Git commit 566dfd8dd9cbefc332a52be665b035b60619a93b by Mark Nauwelaerts.
Committed on 11/10/2020 at 09:51.
Pushed by mnauwelaerts into branch 'master'.

lspclient: only consider user configuration contents changes as change

... whereas format highlight changes should not be considered

M  +9    -1    addons/lspclient/lspclientconfigpage.cpp

https://invent.kde.org/utilities/kate/commit/566dfd8dd9cbefc332a52be665b035b60619a93b
Comment 3 Christoph Cullmann 2020-10-11 13:11:30 UTC
Git commit 1fa0e260974256e90e24e0f9083bcb6453283b8e by Christoph Cullmann, on behalf of Mark Nauwelaerts.
Committed on 11/10/2020 at 13:11.
Pushed by cullmann into branch 'cherry-pick-566dfd8d'.

lspclient: only consider user configuration contents changes as change

... whereas format highlight changes should not be considered


(cherry picked from commit 566dfd8dd9cbefc332a52be665b035b60619a93b)

M  +9    -1    addons/lspclient/lspclientconfigpage.cpp

https://invent.kde.org/utilities/kate/commit/1fa0e260974256e90e24e0f9083bcb6453283b8e
Comment 4 Christoph Cullmann 2020-10-11 13:12:26 UTC
Git commit d02dc1f832ae46c96d72f45c33626a208e04d81f by Christoph Cullmann, on behalf of Mark Nauwelaerts.
Committed on 11/10/2020 at 13:12.
Pushed by cullmann into branch 'release/20.08'.

lspclient: only consider user configuration contents changes as change

... whereas format highlight changes should not be considered


(cherry picked from commit 566dfd8dd9cbefc332a52be665b035b60619a93b)

M  +9    -1    addons/lspclient/lspclientconfigpage.cpp

https://invent.kde.org/utilities/kate/commit/d02dc1f832ae46c96d72f45c33626a208e04d81f
Comment 5 Christoph Cullmann 2020-10-11 13:14:19 UTC
Thanks for fixing this, backported to 20.08.