lspclient: only consider user configuration contents changes as change

... whereas format highlight changes should not be considered

BUG: 427084